--- a/public/editprofile.html
+++ b/public/editprofile.html
@@ -289,7 +289,7 @@
     }
 
     function loadUserData() {
-      fetch(`http://localhost:3000/student/${userId}`)
+      fetch(`https://crr-noc.onrender.com/student/${userId}`)
         .then(res => res.json())
         .then(data => {
           form.name.value = data.name || "";
