--- a/public/editprofile.html
+++ b/public/editprofile.html
@@ -336,11 +336,16 @@ fetch(`${baseUrl}/student/${userId}`)
         email: form.email.value
       };
 
-      fetch("http://localhost:3000/editprofile", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(updatedData)
-      })
+    const baseUrl = window.location.hostname.includes("localhost")
+  ? "http://localhost:3000"
+  : "https://crr-noc.onrender.com";
+
+fetch(`${baseUrl}/editprofile`, {
+  method: "POST",
+  headers: { "Content-Type": "application/json" },
+  body: JSON.stringify(data),
+})
+
         .then(res => res.json())
         .then(data => {
           alert(data.message || "Profile updated successfully!");
