--- a/public/updaterefno.html
+++ b/public/updaterefno.html
@@ -285,7 +285,7 @@
       return;
     }
 
-    fetch("http://localhost:3000/submit-du", {
+      fetch('https://crr-noc.onrender.com/submit-du', {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ userId, payments: paymentData })
