--- a/public/help&feedback.html
+++ b/public/help&feedback.html
@@ -266,7 +266,7 @@
     submitBtn.innerText = "Sending...";
 
     try {
-      const res = await fetch("http://localhost:3000/api/submit-feedback", {
+      const res = await fetch("https://crr-noc.onrender.com/api/submit-feedback", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ name, email, message }),
