--- a/public/sendnotification.html
+++ b/public/sendnotification.html
@@ -217,7 +217,7 @@
   btn.disabled = true;
   btn.textContent = "Sending Notification...";
 
-  fetch("http://localhost:3000/send-notification", {
+  fetch("https://crr-noc.onrender.com/send-notification", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ userId: studentId, message })
