--- a/public/verifynoc.html
+++ b/public/verifynoc.html
@@ -227,7 +227,7 @@
         return;
       }
 
-      fetch(`http://localhost:3000/staff/verify-noc/${reg}`)
+      fetch(`https://crr-noc.onrender.com/staff/verify-noc/${reg}`)
         .then(res => res.json())
         .then(data => {
           if (!data.success) {
