--- a/public/staffhelp.html
+++ b/public/staffhelp.html
@@ -258,7 +258,7 @@ button[type="submit"]:hover {
       const email = e.target.email.value;
       const message = e.target.message.value;
 
-      const res = await fetch("http://localhost:3000/api/submit-feedback", {
+      const res = await fetch("https://crr-noc.onrender.com/api/submit-feedback", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ name, email, message })
