--- a/public/index.html
+++ b/public/index.html
@@ -26,16 +26,14 @@
       overflow: hidden;
     }
     .warning {
-  background-color: #ffefc1;
-  color: #333;
-  padding: 10px;
-  text-align: center;
-  font-weight: bold;
-  border: 1px solid #e0c97f;
-  border-radius: 5px;
-  margin-bottom: 15px;
-}
-    .login-container {
+      color: #01ddff;
+      padding: 10px;
+      text-align: center;
+      font-weight: bold;
+      border-radius: 5px;
+      margin-bottom: 15px;
+      display: block;
+    }  .login-container {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -193,11 +191,11 @@
   </style>
 </head>
 <body>
-  <div id="mobile-warning" style="display: none;" class="warning">
-  📢 For the best experience, please switch to Desktop Site.
-</div>
-
   <div class="login-container">
+    <!-- 📢 Mobile Warning Message -->
+    <div id="mobile-warning" class="warning">
+      📢 For the best experience, please switch to Desktop Site.
+    </div>
     <div class="login-box">
       <h2>Login to NOC Portal</h2>
       <form id="loginForm">
@@ -221,13 +219,6 @@
   <script>
     document.getElementById("loginForm").addEventListener("submit", function (e) {
       e.preventDefault();
-        // Detect mobile screen width (or use user agent for better accuracy)
-  const isMobile = window.innerWidth <= 768;
-
-  if (isMobile) {
-    document.getElementById("mobile-warning").style.display = "block";
-  }
-
       const userId = document.getElementById("userId").value;
       const password = document.getElementById("password").value;
       const role = document.getElementById("role").value;
