--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,15 @@
       height: 100vh;
       overflow: hidden;
     }
-
+     .warning {
+      color: #01ddff;
+      padding: 10px;
+      text-align: center;
+      font-weight: bold;
+      border-radius: 5px;
+      margin-bottom: 15px;
+      display: block;
+    }
     .login-container {
       display: flex;
       justify-content: center;
@@ -185,6 +193,10 @@
 </head>
 <body>
   <div class="login-container">
+       <!-- 📢 Mobile Warning Message -->
+    <div id="mobile-warning" class="warning">
+      📢 For the best experience, please switch to Desktop Site.
+    </div>
     <div class="login-box">
       <h2>Login to NOC Portal</h2>
       <form id="loginForm">
