--- a/public/index.html
+++ b/public/index.html
@@ -25,23 +25,27 @@
       height: 100vh;
       overflow: hidden;
     }
-     .warning {
-      color: #01ddff;
-      padding: 10px;
-      text-align: center;
-      font-weight: bold;
-      border-radius: 5px;
-      margin-bottom: 15px;
-      display: block;
-    }
-    .login-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: var(--bg-overlay);
-      padding: 20px;
-    }
+.login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: var(--bg-overlay);
+}
+
+.mobile-strip {
+  color: #01ddff;
+  padding: 8px 20px;
+  font-size: 13px;
+  text-align: center;
+  border-radius: 12px 12px 0 0;
+  width: 400px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin-bottom: 15px;
+  font-weight: 500;
+}
+
 
     .login-box {
       background: rgba(255, 255, 255, 0.05);
@@ -193,10 +197,7 @@
 </head>
 <body>
   <div class="login-container">
-       <!-- 📢 Mobile Warning Message -->
-    <div id="mobile-warning" class="warning">
-      📢 For the best experience, please switch to Desktop Site.
-    </div>
+ <div class="mobile-strip">📢 For the best experience, please switch to Desktop Site.</div>
     <div class="login-box">
       <h2>Login to NOC Portal</h2>
       <form id="loginForm">
